# fiber-views

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  examples.html  fiber_views.depr.html  fiber_views.depr.rst  genindex.html  index.html  index.rst  installation.rst  make.bat  modules.rst  py-modindex.html  readme.txt  search.html  usage.rst
docs/_sources/: api.rst.txt  index.rst.txt  install.rst.txt  usage.rst.txt
docs/source/: conf.py  fiber_views.depr.rst  fiber_views.rst  index.rst
envs/: env.yml  sphinx.yml
examples/: Example.ipynb
examples/data/: TAIR10_genes.bed  chr3_sample.aligned.fiberseq.bam.bai
fiber_views/: __init__.py  annotation.py  cli.py  fiber_views.py  ft_utils.py  plot.py  tools.py  utils.py
fiber_views/depr/: __init__.py  fiber_views.py  tools.py
sandbox/: Untitled.ipynb  Untitled1.ipynb  all_genes_on_cluster.py  anno_test.py  clustering.py  joe_test.py  kmer.py  nucleosomes.py  render_readme  sandbox.py
tests/: __init__.py  test_fiber_views.py
